--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "react-native-text",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "Scalable font size in Text component for React Native",
   "main": "./index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "types": "./index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/knowbody/react-native-text.git"
