--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Scalable font size in Text component for React Native",
   "main": "./index.js",
   "types": "./index.d.ts",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/knowbody/react-native-text.git"
