--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,5 @@
 {
   "singleQuote": true,
-  "trailingComma": "es5",
-  "semi": true,
-  "arrowParens": "always",
-  "jsxSingleQuote": false,
-  "jsxBracketSameLine": false,
-  "tabWidth": 2,
-  "useTabs": false,
-  "bracketSpacing": true
+  "printWidth": 100,
+  "trailingComma": "all"
 }
