--- a/package.json
+++ b/package.json
@@ -2,10 +2,19 @@
   "name": "react-native-text",
   "version": "0.2.0",
   "description": "Scalable font size in Text component for React Native",
-  "main": "./index.js",
-  "types": "./index.d.ts",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "react-native": "src/index.js",
+  "types": "lib/typescript/src/index.d.ts",
+  "files": [
+    "lib/",
+    "src/"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "bob build",
+    "typescript": "tsc --noEmit",
+    "release": "release-it"
   },
   "repository": {
     "type": "git",
@@ -26,8 +35,23 @@
   },
   "homepage": "https://github.com/knowbody/react-native-text#readme",
   "peerDependencies": {
-    "prop-types": "*",
     "react": "*",
     "react-native": "*"
+  },
+  "devDependencies": {
+    "@react-native-community/bob": "^0.8.0",
+    "@types/react": "^16.9.17",
+    "@types/react-native": "^0.61.0",
+    "release-it": "^12.4.3",
+    "typescript": "^3.7.5"
+  },
+  "@react-native-community/bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      "commonjs",
+      "module",
+      "typescript"
+    ]
   }
 }
