--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scalable font size in Text component for React Native",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
-  "react-native": "src/index.js",
+  "react-native": "lib/module/index.js",
   "types": "lib/typescript/src/index.d.ts",
   "files": [
     "lib/",
